--- a/front/html/cart.html
+++ b/front/html/cart.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8">
     <meta name="description" content="Plateforme incroyable de e-commerce">
-
+    <script src="https://kit.fontawesome.com/b08575133e.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -77,27 +77,27 @@
               <form method="post" class="cart__order__form">
                 <div class="cart__order__form__question">
                   <label for="firstName">Prénom: </label>
-                  <input type="text" name="firstName" id="firstName" required pattern="[a-zA-Zéèêëâîïôûü]*" maxlength="50">
+                  <input type="text" name="firstName" id="firstName" required maxlength="50">
                   <p id="firstNameErrorMsg"><!-- ci est un message d'erreur --></p>
                 </div>
                 <div class="cart__order__form__question">
                   <label for="lastName">Nom: </label>
-                  <input type="text" name="lastName" id="lastName" required pattern="[a-zA-Zéèêëâîïôûü]*" maxlength="50">
+                  <input type="text" name="lastName" id="lastName" required maxlength="50">
                   <p id="lastNameErrorMsg"></p>
                 </div>
                 <div class="cart__order__form__question">
                   <label for="address">Adresse: </label>
-                  <input type="text" name="address" id="address" required pattern="^[0-9]{1,3}(?:(?:[,. ]){1}[-a-zA-Zàâäéèêëïîôöùûüç]+)+">
+                  <input type="text" name="address" id="address" required>
                   <p id="addressErrorMsg"></p>
                 </div>
                 <div class="cart__order__form__question">
                   <label for="city">Ville: </label>
-                  <input type="text" name="city" id="city" required pattern="[a-zA-Zéèêëâîïôûü]*">
+                  <input type="text" name="city" id="city" required >
                   <p id="cityErrorMsg"></p>
                 </div>
                 <div class="cart__order__form__question">
                   <label for="email">Email: </label>
-                  <input type="email" name="email" id="email" required pattern="^[a-zA-Z0-9.-_]+[@]{1}[a-zA-Z0-9.-_]+[.]{1}[a-z]{2,10}$">
+                  <input type="email" name="email" id="email" required >
                   <p id="emailErrorMsg"></p>
                 </div>
                 <div class="cart__order__form__submit">
